refactor for presentation

--- a/boost_range/boost_range.vcxproj.filters
+++ b/boost_range/boost_range.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="group_by.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="day_iterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
