--- a/boost_range/boost_range.vcxproj
+++ b/boost_range/boost_range.vcxproj
@@ -84,6 +84,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="day_iterator.h" />
+    <ClInclude Include="group_by.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
